--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.31.0
-openpyxl>=3.1.0
-aiohttp>=3.9.0
-catboost>=1.2.0
-scikit-learn>=1.3.0
-google-cloud-aiplatform>=1.38.0
-google-cloud-bigquery>=3.14.0
-google-cloud-storage>=2.14.0
-python-dotenv>=1.0.0
-pyyaml>=6.0.0
+# SMT WEEX Trading Bot Dependencies
+
+# Core
+python-dotenv==1.0.0
+pyyaml==6.0.1
+requests==2.31.0
+aiohttp==3.9.1
+
+# Data Processing
+pandas==2.1.4
+numpy==1.26.2
+
+# ML
+catboost==1.2.2
+scikit-learn==1.3.2
+
+# Google Cloud
+google-cloud-bigquery==3.14.1
+google-cloud-storage==2.14.0
+google-genai==0.3.0
+db-dtypes==1.2.0
+
+# WEEX Trading
+hmac
+hashlib
+
+# Logging
+colorlog==6.8.0
